- [Feature] Edit Access Control List (#3191) (S3, Google Storage, Google Docs)
- [Feature] Enable Bucket Versioning (#4511) (S3)
- [Feature] Enable Bucket Multi-Factor Authentication Delete (#4510) (S3)
- [Feature] Display previous file versions in browser (S3, Google Docs)
- [Feature] Download previous file version (S3, Google Docs)
- [Feature] Revert to previous file version (S3)
- [Bugfix] Eucalyptus Walrus support enabled by default (S3)
- [Bugfix] Improved interoperability with Eucalyptus Walrus (S3)
- [Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)

3.5.1 (Jun-15-2010) [http://trac.cyberduck.ch/milestone/3.5.1]
- [Bugfix] Crash opening Info window (#4536)
- [Bugfix] Nested folder not visible (#4534) (Google Docs)
- [Bugfix] Upload into folder not possible (#4550) (Google Docs)
- [Bugfix] Downloading spreadsheets fails with permission error (#4538) (Google Docs)
- [Feature] Replacing documents on upload adding new revision (Google Docs)

3.5 (Jun-09-2010) [http://trac.cyberduck.ch/milestone/3.5]
- [Localize] Slovenian Localization
- [Localize] Romanian Localization
- [Feature] Google Docs support (Google Docs)
- [Feature] Convert uploads to Google Docs format (Google Docs)
- [Feature] Download format preferences for documents (Google Docs)
- [Feature] Optical Character Recognition (OCR) for image uploads (Google Docs)
- [Feature] Support for Asia Pacific (Singapore) location (S3)
- [Feature] Support for keyboard-interactive authentiation using SecurID (#4459) (SFTP)
- [Feature] HTTP plain text connection support to connect to third party S3 servers (#4181) (S3)
- [Feature] Custom metadata attributes (#4063) (S3, Rackspace Cloud Files)
- [Feature] Configure Access Logs for CloudFront streaming distributions (S3)
- [Feature] Option for Reduced Redundancy Storage (RRS) (S3)
- [Bugfix] Overwrite files causes append (S3) (#4419)
- [Bugfix] Connect anonymously to public buckets (S3) (#4480)
- [Bugfix] Help menu items disabled (#4406)
