@@ -39,9 +39,12 @@
         <li>[Feature] Display previous file versions in browser (S3, Google Docs)</li>
         <li>[Feature] Download previous file version (S3, Google Docs)</li>
         <li>[Feature] Revert to previous file version (S3)</li>
-        <li>[Bugfix] Eucalyptus Walrus support enabled by default (S3)</li>
+        <li>[Feature] Eucalyptus Walrus support enabled by default (S3)</li>
         <li>[Bugfix] Improved interoperability with Eucalyptus Walrus (S3)</li>
         <li>[Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)</li>
+        <li>[Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (
+            <a href="http://trac.cyberduck.ch/ticket/2443">#2443</a>)
+        </li>
     </ul>
 
     <strong><a href=
