@@ -12,9 +12,10 @@ Changelog. Last modified: $Date$
 - [Feature] Display previous file versions in browser (S3, Google Docs)
 - [Feature] Download previous file version (S3, Google Docs)
 - [Feature] Revert to previous file version (S3)
-- [Bugfix] Eucalyptus Walrus support enabled by default (S3)
+- [Feature] Eucalyptus Walrus support enabled by default (S3)
 - [Bugfix] Improved interoperability with Eucalyptus Walrus (S3)
 - [Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)
+- [Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (#2443)
 
 3.5.1 (Jun-15-2010) [http://trac.cyberduck.ch/milestone/3.5.1]
 - [Bugfix] Crash opening Info window (#4536)
